tools/data discussion left-align elements

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -341,7 +341,7 @@
                         <i class="material-icons">forum</i>
                         Discussion
                     </div>
-                    <div class="collapsible-body">
+                    <div class="collapsible-body left-align">
                         {% include "app/qa.html" with qa_type="tools" %}
                     </div>
                 </li>
