first working impl #66

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -342,7 +342,7 @@
                         Discussion
                     </div>
                     <div class="collapsible-body left-align">
-                        {% include "app/qa.html" with qa_type="tools" %}
+                        {% include "app/qa.html" with qa_type="tool" %}
                     </div>
                 </li>
             </ul>
