--- a/OpenBioC/app/templates/app/qa.html
+++ b/OpenBioC/app/templates/app/qa.html
@@ -1,4 +1,4 @@
-<div class="row" ng-show="true">
+<div class="row" ng-show="!{{qa_type}}s_info_editable">
     <div class="row right-align" style="margin-top:15px; margin-bottom: 15px;">
         <a class="waves-effect waves-light btn-small" href=""
             ng-click="gen_qa_add_comment_button_pressed('{{ qa_type }}')">Add Comment</a>
