report_tokens --> timeline #73

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -152,9 +152,9 @@
 	<script src="/static/app/cytoscape.js-3.4.2/dist/cytoscape.min.js" type="text/javascript" charset="utf-8"></script>
 	-->	
 	
-	<!-- timeline  -->
-	<script src="/static/app/vis-4.21.0/dist/vis.min.js" type="text/javascript" charset="utf-8"></script>
-	<link rel="stylesheet" href="/static/app/vis-4.21.0/dist/vis.min.css" />
+	<!-- timeline  vis-4.21.0 -->
+	<script src="/static/app/vis.min.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" href="/static/app/vis.min.css" />
 
 
 </head>
