--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -1154,7 +1154,7 @@
                             <p><span ng-bind-html="qa_comment_html"></span></p>
                         </div>
                     </div>
-                    <div class="row right-align" style="margin-top:15px; margin-bottom: 15px;">
+                    <div class="row right-align" style="margin-top:15px; margin-bottom: 15px;" ng-show="!qa_show_new_comment">
                         <a class="waves-effect waves-light btn-small" href=""
                             ng-click="qa_add_comment_button_pressed()">Add Comment</a>
                     </div>
