--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -22,7 +22,7 @@
     <div id="leftPanelProgress" class="progress" style="margin-top:1px; display: none;">
         <div class="indeterminate"></div>
     </div>
-    <a id="preloaderBtn" class="waves-effect waves-light btn">Toggle Preloader</a>
+    <!-- <a id="preloaderBtn" class="waves-effect waves-light btn">Toggle Preloader</a> -->
     <div style="margin: 20px;">
         <!-- --------------------------------------------------------------------------------------- -->
         <!-- ------------------------------- Search Input ------------------------------------------ -->
