added: time since registration #68

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -1076,7 +1076,7 @@
                             </div>
                             <div class="row left-align">
                                 <div class="col s12 m3 grid-s12-m3-l3"><b>Member Since:</b></div>
-                                <div class="col s12 m9 grid-s12-m9-l9"><span></span></div>
+                                <div class="col s12 m9 grid-s12-m9-l9"><span ng-bind="user_created_at"></span></div>
                             </div>
                             <div class="row left-align">
                                 <div class="col s12 m3 grid-s12-m3-l3"><b>Info:</b></div>
