--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -832,7 +832,7 @@
     <div class="faster" id="referencesRightPanel" style="display: none;">
         <div class="card blue-grey lighten-4 rightPanelTitleCard">
             <div class="card-content rightPanelTitleContent">
-                <h5 class="rightPanelTitleHeader">Report</h5>
+                <h5 class="rightPanelTitleHeader">Reference</h5>
                 <a class="waves-effect btn-flat right" style="margin-top: -30px;" ng-click="references_button_cancel_clicked()">Cancel</a>
             </div>
         </div>
