hide all "statistics" right panel accordions #87

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -278,7 +278,7 @@
                 <!-- --------------------------------------------------------------------------------------- -->
                 <!-- ---------------------------------- Statistics ----------------------------------------- -->
                 <!-- --------------------------------------------------------------------------------------- -->
-                <li id="toolsDataStatistics">
+                <li id="toolsDataStatistics" ng-show="false">
                     <div class="collapsible-header">
                         <i class="material-icons arrow">keyboard_arrow_right</i>
                         <i class="material-icons">poll</i>
@@ -619,7 +619,7 @@
                 <!-- --------------------------------------------------------------------------------------- -->
                 <!-- ------------------------------ Statistics Workflow ------------------------------------ -->
                 <!-- --------------------------------------------------------------------------------------- -->
-                <li id="workflowStatistics">
+                <li id="workflowStatistics" ng-show="false">
                     <div class="collapsible-header">
                         <i class="material-icons arrow">keyboard_arrow_right</i>
                         <i class="material-icons">poll</i>
@@ -770,7 +770,7 @@
                 <!-- --------------------------------------------------------------------------------------- -->
                 <!-- ------------------------------------ Statistics ------------------------------------------ -->
                 <!-- --------------------------------------------------------------------------------------- -->
-                <li id="reportsStatistics">
+                <li id="reportsStatistics" ng-show="false">
                     <div class="collapsible-header">
                         <i class="material-icons arrow">keyboard_arrow_right</i>
                         <i class="material-icons">poll</i>
@@ -972,7 +972,7 @@
                 <!-- --------------------------------------------------------------------------------------- -->
                 <!-- ---------------------------------- Statistics ----------------------------------------- -->
                 <!-- --------------------------------------------------------------------------------------- -->
-                <li id="referencesStatistics">
+                <li id="referencesStatistics" ng-show="false">
                     <div class="collapsible-header">
                         <i class="material-icons arrow">keyboard_arrow_right</i>
                         <i class="material-icons">poll</i>
